--- a/main.html
+++ b/main.html
@@ -8,6 +8,48 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form>
+      <div>
+        <label for="Name">Name:</label>
+        <input type="text" name="name" id="name" placeholder="Name" />
+      </div>
+      <div>
+        <label for="phone">Phone Number:</label>
+        <input
+          type="number"
+          name="phone"
+          id="phone"
+          placeholder="Phone Number"
+        />
+      </div>
+      <div>
+        <label for="address">Address:</label>
+        <input type="text" name="address" id="address" placeholder="Address" />
+      </div>
+      <div>
+        <label for="checkbox">Have you ever lived with a Dog before?</label>
+        <input
+          type="checkbox"
+          name="checkbox"
+          id="checkbox"
+          value="Have you ever lived with a Dog before?"
+        />
+      </div>
+      <div>
+        <label for="multiSelect">Please select your preferred breeds</label>
+        <select name="multiSelect" id="multiSelect" multiple>
+          <option value="Indian Street Dog">Indian Street Dog</option>
+          <option value="labrador">Labrador Retriever</option>
+          <option value="germanshepherd">German Shepherd</option>
+          <option value="goldenretriever">Golden Retriever</option>
+          <option value="bulldog">Bulldog</option>
+          <option value="poodle">Poodle</option>
+        </select>
+      </div>
+      <div>
+        <input type="submit" value="Submit" id="submit">
+      </div>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
