--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
       <div>
         <label for="phone">Phone Number:</label>
         <input
-          type="number"
+          type="text"
           name="phone"
           id="phone"
           placeholder="Phone Number"
